# batboy

./: .coverage  .gitignore  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/batboy/: __init__.py  utils.py
src/batboy/config/: constants.py
src/batboy/data/: __init__.py  ncaa_schools.parquet
src/batboy/scraping/: core.py  game_logs.py  roster.py  rosters.py  schedule.py  schedules.py  stats_to_date.py  teams.py
tests/fixtures/html/: pre_2018-2019.html  tennessee_2025_schedule.html
tests/test_scraping/: test_core.py  test_game_logs.py  test_roster.py  test_schedule.py  test_team_history.py  test_teams.py
